<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sensors_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hackzurich.carapp.carapphackzurich.SensorsViewActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowOrderPreserved="true"
            android:useDefaultMargins="true">

            <Button android:text="@string/accelerometer" />

            <Button android:text="@string/gravity" />

            <TextView
                android:id="@+id/tvACCELEROMETER"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvGRAVITY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button android:text="@string/gyroscope_uncalibrated" />

            <Button android:text="@string/gyroscope" />

            <TextView
                android:id="@+id/tvGYROSCOPE_UNCALIBRATED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvGYROSCOPE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button android:text="@string/linear_acceleration" />

            <Button android:text="@string/rotation_vector" />

            <TextView
                android:id="@+id/tvLINEAR_ACCELERATION"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvROTATION_VECTOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button android:text="@string/magnetometer_un" />

            <Button android:text="@string/magnetometer" />

            <TextView
                android:id="@+id/tvMAGNETOMETER_UNCALIBRATED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvMAGNETOMETER"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button android:text="@string/GPS" />

            <TextView
                android:id="@+id/tvGPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </GridLayout>
    </ScrollView>
</RelativeLayout>
